Bye Bye Comments!
Signed-off-by: KrishanuRoyEng <krishanuroygit@gmail.com>

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,7 +9,7 @@ NODE_ENV=development
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRE=7d
 
-# GitHub OAuth (Free for public repos)
+# GitHub OAuth
 GITHUB_CLIENT_ID= GITHUB_CLIENT_ID
 GITHUB_CLIENT_SECRET= GITHUB_CLIENT_SECRET
 GITHUB_REDIRECT_URI=http://localhost:3000/auth/github/callback
