--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,3 @@
-# -------------------------------------------------------------------
-# Express Backend Multi-Stage Dockerfile (Optimized for Production)
-# Builds TypeScript and uses a small runtime image.
-# -------------------------------------------------------------------
-
 # STAGE 1: Builder (Build & Compile)
 FROM node:20-alpine AS builder
 WORKDIR /app
@@ -14,7 +9,10 @@ RUN apk update && apk add --no-cache openssl bash curl
 COPY package.json package-lock.json ./
 RUN npm install
 
-# --- MANDATORY PRISMA STEP ---
+# Copy Prisma schema
+COPY prisma ./prisma/ 
+# -----------------------------------------------------------
+
 # Explicitly generate the Prisma Client for the production environment
 RUN npx prisma generate
 # -----------------------------
@@ -26,15 +24,13 @@ COPY startup.sh ./startup.sh
 # Run TypeScript compilation: creates dist/server.js
 RUN npm run build
 
-# -------------------------------------------------------------------
 # STAGE 2: Runner (Production)
-# Runs the compiled JavaScript with a lean Node runtime and non-root user.
-# -------------------------------------------------------------------
 FROM node:20-slim AS runner
 
 # Environment variables
 ENV NODE_ENV=production
 ENV PORT=3001
+
 EXPOSE 3001
 
 # Security: Create and use a non-root user
@@ -43,7 +39,6 @@ USER nodeuser
 WORKDIR /app
 
 # Copy essential runtime files from the builder stage
-# 1. Compiled JavaScript code
 COPY --from=builder /app/dist ./dist
 
 # 2. Node modules (includes Prisma Client)
@@ -53,7 +48,9 @@ COPY --from=builder /app/package.json ./package.json
 # 3. Startup script and configuration files
 COPY --from=builder /app/startup.sh ./startup.sh
 RUN chmod +x ./startup.sh # Make the script executable
-COPY --from=builder /app/prisma ./prisma
+
+# 4. Copy the Prisma schema (needed if using migrations/studio/etc in the container)
+COPY --from=builder /app/prisma ./prisma 
 
 # Run the startup script when the container launches
 CMD ["./startup.sh"]
