--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,13 +9,11 @@ RUN apk update && apk add --no-cache openssl bash curl
 COPY package.json package-lock.json ./
 RUN npm install
 
-# Copy Prisma schema
+# Copy the Prisma schema before generating the client
 COPY prisma ./prisma/ 
-# -----------------------------------------------------------
 
 # Explicitly generate the Prisma Client for the production environment
 RUN npx prisma generate
-# -----------------------------
 
 # Copy source code and the startup script
 COPY . .
@@ -24,7 +22,6 @@ COPY startup.sh ./startup.sh
 # Run TypeScript compilation: creates dist/server.js
 RUN npm run build
 
-# STAGE 2: Runner (Production)
 FROM node:20-slim AS runner
 
 # Environment variables
@@ -33,12 +30,12 @@ ENV PORT=3001
 
 EXPOSE 3001
 
-# Security: Create and use a non-root user
+# Security setup: Create user/group (still running as root)
 RUN groupadd --system nodeuser && useradd --system --gid nodeuser nodeuser
-USER nodeuser
 WORKDIR /app
 
-# Copy essential runtime files from the builder stage
+
+# 1. Compiled JavaScript code
 COPY --from=builder /app/dist ./dist
 
 # 2. Node modules (includes Prisma Client)
@@ -47,10 +44,16 @@ COPY --from=builder /app/package.json ./package.json
 
 # 3. Startup script and configuration files
 COPY --from=builder /app/startup.sh ./startup.sh
+# Run chmod while running as 'root' to ensure success
 RUN chmod +x ./startup.sh
 
 # 4. Copy the Prisma schema (needed if using migrations/studio/etc in the container)
 COPY --from=builder /app/prisma ./prisma 
+
+# SECURITY STEP: Change ownership of the app directory and then switch user
+# This section MUST run as root (which is the default until USER is called).
+RUN chown -R nodeuser:nodeuser /app
+USER nodeuser
 
 # Run the startup script when the container launches
 CMD ["./startup.sh"]
