--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,5 +14,21 @@ GITHUB_CLIENT_ID= GITHUB_CLIENT_ID
 GITHUB_CLIENT_SECRET= GITHUB_CLIENT_SECRET
 GITHUB_REDIRECT_URI=http://localhost:3000/auth/github/callback
 
+# Email (Resend)
+RESEND_API_KEY="re_xxxxxxxxxxxx"
+NOTIFICATION_EMAIL="notifications@yourdomain.com"
+ADMIN_EMAIL="admin@yourdomain.com"
+
+# Discord Webhooks (optional but recommended)
+DISCORD_WEBHOOK_NEW_USERS="https://discord.com/api/webhooks/xxx/yyy"
+DISCORD_WEBHOOK_APPROVALS="https://discord.com/api/webhooks/xxx/yyy"
+DISCORD_WEBHOOK_NEW_PROJECTS="https://discord.com/api/webhooks/xxx/yyy"
+DISCORD_WEBHOOK_PROJECT_APPROVALS="https://discord.com/api/webhooks/xxx/yyy"
+DISCORD_WEBHOOK_ERRORS="https://discord.com/api/webhooks/xxx/yyy"
+
+# Logging
+LOG_LEVEL="info"  # Development
+#LOG_LEVEL="warn"  # Production
+
 # Frontend URL
 FRONTEND_URL=http://localhost:3000
