--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,6 +26,11 @@ DISCORD_WEBHOOK_NEW_PROJECTS="https://discord.com/api/webhooks/xxx/yyy"
 DISCORD_WEBHOOK_PROJECT_APPROVALS="https://discord.com/api/webhooks/xxx/yyy"
 DISCORD_WEBHOOK_ERRORS="https://discord.com/api/webhooks/xxx/yyy"
 
+# Superadmin
+SUPERADMIN_GITHUB_ID=SUPER_ADMIN_GITHUB_ID
+SUPERADMIN_USERNAME=SUPER_ADMIN_GITHUB_USERNAME
+SUPERADMIN_EMAIL=SUPER_ADMIN_GITHUB_EMAIL
+
 # Logging
 LOG_LEVEL="info"  # Development
 #LOG_LEVEL="warn"  # Production
