--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
-    "prisma:seed": "ts-node --project prisma/tsconfig.prisma.json prisma/seed.ts"
+    "prisma:seed": "ts-node --project prisma/tsconfig.json prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
