--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,6 +22,7 @@ ADMIN_EMAIL="admin@yourdomain.com"
 # Discord Webhooks (optional but recommended)
 DISCORD_WEBHOOK_NEW_USERS="https://discord.com/api/webhooks/xxx/yyy"
 DISCORD_WEBHOOK_APPROVALS="https://discord.com/api/webhooks/xxx/yyy"
+DISCORD_WEBHOOK_REJECTIONS="https://discord.com/api/webhooks/xxx/yyy"
 DISCORD_WEBHOOK_NEW_PROJECTS="https://discord.com/api/webhooks/xxx/yyy"
 DISCORD_WEBHOOK_PROJECT_APPROVALS="https://discord.com/api/webhooks/xxx/yyy"
 DISCORD_WEBHOOK_PROJECT_REJECTIONS="https://discord.com/api/webhooks/xxx/yyy"
